tests/ui/parser/misspelled-keywords/impl-block.stderr
error: expected one of `!` or `::`, found `Human`
  --> $DIR/impl-block.rs:3:6
   |
LL | ipml Human {}
   |      ^^^^^ expected one of `!` or `::`
   |
help: there is a keyword `impl` with a similar name
   |
LL - ipml Human {}
LL + impl Human {}
   |

error: aborting due to 1 previous error

